fixed the gap

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 /* Dashboard.css */
 
 .dashboard {
+  position: absolute;
+  top: 0px;
+  height: 100%;
   min-height: 100vh;
   background-color: #f3f4f6;
-  width: 1700px;
+  width: 100%;
   padding: 5rem;
 }
 
