--- a/src/components/styles/pagestyle.css
+++ b/src/components/styles/pagestyle.css
@@ -1,4 +1,7 @@
 .page-container {
+  position: absolute;
+  top: 0px;
+  height: 100%;
   min-height: 100vh;
   width: 100%;
   display: flex;
@@ -102,6 +105,9 @@
   }
 }
 .contact-container {
+  position: absolute;
+  height: 100%;
+  top: 0px;
   min-height: calc(100vh - 5rem);
   width: 100%;
   display: flex;
